--- a/src/css/index.css
+++ b/src/css/index.css
@@ -21,6 +21,7 @@
     /* font-family: 'Raleway', sans-serif; */
 
     /* heading mobile */
+    --h1-mob: 2.2rem;
     --h2-mob: 2rem;
     --h3-mob: 1.8rem;
     --h4-mob: 1.6rem;
@@ -48,13 +49,13 @@
     --sm: 5%;
     
     /* overlay */
-    --ovl-drk: rgba(0,0,0,0.5);
-    --ovl-lgt: rgba(122,122,122,0.5);
+    --ovl-drk: rgba(0, 0, 0, 0.945);
+    
     
     /* dev borders */
-    --wireframe: 3px solid darkblue;
+    /* --wireframe: 3px solid darkblue;
     --component: 3px dotted darkgreen;
-    --debugging: 3px dotted darkred;
+    --debugging: 3px dotted darkred; */
 
 }
 
@@ -73,13 +74,12 @@
 }
 
 /* global : grid */
-header,
-section,
 main,
-footer {
+section {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-auto-rows: minmax(50px, auto);
+    min-height: 100vh;
     width: 100%;
 }
 
@@ -99,18 +99,11 @@ footer {
 }
 
 /* global : headings */
-h2 {
-    font-size: var(--h2-mob);
-}
-h3 {
-    font-size: var(--h3-mob);
-}
-h4 {
-    font-size: var(--h4-mob);
-}
-h5 {
-    font-size: var(--h5-mob);
-}
+h1 {font-size: var(--h1-mob);}
+h2 {font-size: var(--h2-mob);}
+h3 {font-size: var(--h3-mob);}
+h4 {font-size: var(--h4-mob);}
+h5 {font-size: var(--h5-mob);}
 h2, h3, h4, h5 {
     color: var(--main);
     letter-spacing: 2px;
@@ -127,153 +120,224 @@ p {
     padding-bottom: var(--md);
 }
 
-/* app */
+/* global : buttons */
+section button {
+    background: transparent;
+    border: 2px solid var(--black);
+    color: var(--black);
+    font-weight: bold;
+    letter-spacing: 5px;
+    margin-bottom: 10px;
+    padding: var(--sm);
+    text-transform: capitalize;
+    min-height: 30px;
+    width: 60%;
+}
+
+/* section : app */
 #app {
     font-family: var(--font-main);
     position: relative;
     min-height: 100vh;
     height: 100%;
 }
-#app nav {
-    grid-column: span 6;
-    grid-row: span 2;
-}
-#app header {
-    grid-column: span 6;
-    grid-row: span 2;
-}
 #app section {
     grid-column: span 6;
     grid-row: span 4;
 }
-#app footer {
+
+/* section : frm */
+#frm {
+    background: var(--white);
+    height: 100vh;
+    width: 100vw;
+    padding: var(--sm);
+    position: relative;
+}
+#frm h4 {
+    color: var(--main);
+    text-transform: uppercase;
+}
+#frm .elmnts:nth-child(1) {
+    grid-column: span 6;
+    grid-row: span 1;
+}
+/* frm : form */
+#frm form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    height: 100%;
+    width: 100%;
+}
+#frm label {
+    color: var(--black);
+    letter-spacing: 4px;
+    padding-bottom: var(--sm);
+    padding-top: var(--sm);
+    text-transform: capitalize;
+}
+#frm input {
+    background: transparent;
+    border: 2px solid var(--black);
+    color: var(--black);
+    letter-spacing: 2px;
+    min-height: 40px;
+    width: 100%;
+    padding-left: var(--sm);
+    padding-right:  var(--sm);
+    transition: all 500ms ease;
+}
+#frm input:focus {
+    letter-spacing: 2px;
+    padding-left: var(--md);
+    transition: all 300ms ease-out;
+}
+#frm input:last-of-type {
+    margin-bottom: var(--md);
+}
+/* frm : btn */
+#frm #btn_ext {
+    position: absolute;
+    top: var(--sm);
+    right: var(--sm);
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: transparent;
+    border: 3px solid var(--black);
+    color: var(--main);
+}
+#frm #btn_ext i {
+    color: var(--black);
+    font-size: var(--txt-sm);
+}
+#frm #btn_sub {
+    width: 100%;
+    background: var(--black);
+    color: var(--white);
+}
+
+/* section : hps */
+#hps {
+    background: var(--white);
+    min-height: 100vh;
+}
+#hps p {
+    text-align: center;
+}
+#hps .elmnts:nth-child(1) {
     grid-column: span 6;
     grid-row: span 2;
 }
-
-/* header : layout */
-header .elmnts {
-    /* dev */
-    border: var(--debugging);
-}
-header .elmnts:nth-child(1) {
+#hps .elmnts:nth-child(2) {
     grid-column: span 6;
     grid-row: span 1;
 }
-header .elmnts:nth-child(2) {
-    grid-column: span 6;
-    grid-row: span 1;
-
-    justify-content: flex-start;
-    align-items: flex-start;
-}
-
-/* nav : layout */
-nav {
+/* hps : list */
+#hps ul {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-around;
     align-items: flex-start;
     width: 100%;
-
-    /* dev */
-    border: var(--wireframe);
-}
-/* nav : list */
-nav ul {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
     height: 100%;
-    width: 100%;
-    
-    /* dev */
-    border: var(--component);
 }
-nav li {
-    list-style: none;
-    width: 80%;
-    
-    /* dev */
-    border: var(--debugging);
+#hps li {
+    border: 2px solid var(--black);
+    list-style-type: none;
+    margin-bottom: var(--sm);
+    padding: var(--sm);
+    position: relative;
+    width: 100%;
+}
+#hps span {
+    font-size: var(--txt-sm);
+    text-transform: capitalize;
+    letter-spacing: 2px;
+}
+/* hps : btns */
+#hps #btn {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    min-height: 100px;
+    width: 100%;
+}
+#hps #btn button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80px;
+    height: 50px;
+    transition: 400ms all ease-in;
+}
+#hps #btn i {
+    transition: 400ms all ease-in;
+}
+#hps #btn button:hover {
+    background: var(--black);
+    transition: 400ms all ease-in-out;
+}
+#hps #btn button:hover i {
+    color: var(--white);
+    transition: 400ms all ease-in-out;
+}
+#hps #btn_add {
+    background: transparent;
+    transition: 400ms all ease-in;
+}
+#hps #btn_add:hover {
+    background: var(--black);
+    transition: 400ms all ease-in-out;
+    color: var(--white);
 }
 
-/* abo : layout */
-#abo .elmnts {
-    /* dev */
-    border: var(--debugging);
-}
-#abo .elmnts:nth-child(1) {
+
+
+/* under design *//* under design *//* under design */
+/* under design *//* under design *//* under design */
+
+
+/* section : wel */
+#wel .elmnts:nth-child(1) {
     grid-column: span 6;
     grid-row: span 1;
 
     justify-content: flex-start;
     align-items: flex-start;
 }
-#abo .elmnts:nth-child(2) {
+#wel .elmnts:nth-child(2) {
     grid-column: span 6;
     grid-row: span 1;
 }
+/* wel : btn */
+#wel #btn_run {
+    background: transparent;
+    border: 3px solid var(--black);
+    color: var(--black);
+    font-size: var(--txt-sm);
+    font-weight: bold;
+    letter-spacing: 5px;
+    min-height: 22px;
+    padding: var(--sm);
+    width: 60%;
+}
 
-/* mdl : layout */
+/* div : mdl */
 #mdl {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-auto-rows: minmax(50px, auto);
-    color: var(--white);
-    max-height: 100vh;
-
-}
-#mdl .elmnts:nth-child(1) {
-    grid-column: span 6;
-    grid-row: span 1;
-    
-    align-items: flex-start;
-}
-#mdl .elmnts:nth-child(2) {
-    grid-column: span 6;
-    grid-row: span 1;
-}
-#mdl .elmnts:nth-child(3) {
-    grid-column: span 6;
-    grid-row: span 1;
-}
-/* mdl : form */
-#mdl form {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    max-height: 100vh;
     width: 100%;
-    
-    /* dev */
-    border: var(--debugging);
+    background: var(--ovl-drk);
 }
-#mdl label {
-    padding-bottom: var(--sm);
-    font-weight: bold;
-    letter-spacing: 2px;
-    text-transform: capitalize;
-}
-#mdl input {
-    margin-bottom: 10px;
-    padding-left: var(--sm);
-    transition: all 500ms ease;
-    position: relative;
-    min-height: 40px;
-    width: 100%;
-}
-#mdl input:focus {
-    font-weight: bold;
-    letter-spacing: 2px;
-    text-align: center;
-    transition: all 300ms ease-out;
-}
-#mdl h3 {
-    color: var(--white);
-}
+
 /* edt : layout */
 #edt {
     /* dev */
@@ -316,57 +380,10 @@ nav li {
     grid-row: span 1;
 }
 
-/* buttons */
-nav button {
-    background: transparent;
-    width: 100%;
-    padding: var(--sm);
-    font-size: var(--txt-sm);
 
-    /* dev */
-    border: 3px solid var(--black);
-}
-nav li button {
-    text-transform: capitalize;
-    letter-spacing: 2px;
-    font-weight: bold;
-}
+/* under design *//* under design *//* under design */
+/* under design *//* under design *//* under design */
 
-#abo button {
-    background: var(--main);
-    border: none;
-    color: var(--white);
-    font-size: var(--txt-sm);
-    font-weight: bold;
-    letter-spacing: 4px;
-    
-    min-height: 22px;
-    padding: var(--sm);
-    width: 60%;
-}
-#mdl #btn_ext {
-    background: transparent;
-    border: 2px solid var(--white);
-    padding: var(--sm);
-    margin-bottom: var(--md);
-    width: 100%;
-}
-#mdl #btn_ext i {
-    color: var(--white);
-    font-size: var(--txt-sm);
-}
-#mdl button {
-    background: var(--main);
-    border: none;
-    color: var(--white);
-    font-weight: bold;
-    letter-spacing: 2px;
-    margin-bottom: 10px;
-    padding: var(--sm);
-    text-transform: capitalize;
-    min-height: 30px;
-    width: 100%;
-}
 
 /* media : desktop */
 @media (min-width: 960px) {}
